<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    tools:context=".NamesActivity">

    <TextView
        android:id="@+id/names_head"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/names_headline"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_NM_button"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/actor"
        android:text="@string/next_NM_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/names_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/names_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:orientation="vertical">


            <EditText
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_input_hint"
                android:inputType="textPersonName"
                android:tag="UserInput" />

            <Button
                android:id="@+id/add_names_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_names_button"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/fgfdg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/beer" />

</androidx.constraintlayout.widget.ConstraintLayout>