<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    tools:context=".ConnectActivity">

    <Button
        android:id="@+id/next_CS_button"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/actor"
        android:text="@string/next_NM_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/connect_head"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/connect_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/con_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?attr/dividerVertical"
            android:showDividers="middle|beginning">

            <TableRow
                android:id="@+id/connect_row_head"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="?attr/dividerVertical"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/con_dish_head_table"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:text="@string/dish_table_head"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/con_splitter_head_table"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:text="@string/con_splitter_table_head"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="103dp"
        android:layout_height="95dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/food6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/coke" />


</androidx.constraintlayout.widget.ConstraintLayout>