<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    tools:context=".SummaryActivity">

    <Button
        android:id="@+id/next_SS_button"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/actor"
        android:text="@string/finish_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/summary_head"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/summary_head"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/tip_seek"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginBottom="130dp"
        android:max="30"
        android:progress="1"
        android:scrollbarSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="42dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="130dp"
        android:text="@string/tip_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tip_number_box"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:hint="@string/tip_number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/tip_all_check"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tip_non_splitters"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/summ_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/total_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/summ_names_container"
                android:layout_width="190dp"
                android:layout_height="450dp"
                android:orientation="vertical"
                android:textAlignment="center"></LinearLayout>

            <LinearLayout
                android:id="@+id/summ_price_container"
                android:layout_width="190dp"
                android:layout_height="450dp"
                android:orientation="vertical"
                android:textAlignment="center"></LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>